--- a/css/sass/_chapter5.sass
+++ b/css/sass/_chapter5.sass
@@ -17,7 +17,7 @@
 
     span
       display: block
-      font-size: $font-size * 1.1
+      font-size: 22px
       margin: .25em 0
 
   .share_options,
@@ -107,7 +107,7 @@
 
   .ask_details a.big,
   .three_steps a
-    background: $green
+    background-color: $green
     color: #fff
     display: inline-block
     font-family: $proxima-bold
@@ -116,6 +116,10 @@
     padding: 0.5em 1em 0.4em 1em
     text-decoration: none
     @include triangle-right(20px, $green)
+    @include transition(background-color .2s)
+
+    &:before
+      @include transition(border-left-color .2s)
 
     &:hover
       background: $dark
@@ -140,7 +144,9 @@
     .first_step,
     .second_step,
     .third_step
+      background-repeat: no-repeat
       margin-bottom: 5em
+      padding-top: 2em
       padding-left: 200px
 
     h3
@@ -153,3 +159,15 @@
     p
       font-size: 18px
       margin: .5em 0 1.5em
+
+    .first_step
+      background-image: image-url('5/1.gif')
+      background-position: left 30px
+
+    .second_step
+      background-image: image-url('5/2.gif')
+      background-position: left 12px
+
+    .third_step
+      background-image: image-url('5/3.gif')
+      background-position: left 25px
