--- a/css/sass/_mixins.sass
+++ b/css/sass/_mixins.sass
@@ -122,7 +122,7 @@
 
   // small displays; largest image that iOS can load into single memory buffer
   @media screen and (max-height: 1024px) and (max-width: 1024px)
-    background-image: image-url($name + "-medium.jpg"  + $ex)
+    background-image: image-url($name + "-medium.jpg")
 
   // phones
   @media screen and (max-height: 640px) and (max-width: 640px)
