Michael Davidson image.

--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -249,6 +249,9 @@ section
     &.marc_freedman .contents
       background-image: image-url('person-marc_freedman.jpg')
 
+    &.michael_davidson .contents
+      background-image: image-url('person-michael_davidson.jpg')
+
     &.diane_oakley .contents
       background-image: image-url('person-diane_oakley.jpg')
 
