--- a/css/style.css
+++ b/css/style.css
@@ -354,58 +354,61 @@ section {
   section.quotation.marc_freedman .contents {
     background-image: url('../img/person-marc_freedman.jpg?1369899655'); }
   /* line 252, sass/_base.sass */
+  section.quotation.michael_davidson .contents {
+    background-image: url('../img/person-michael_davidson.jpg?1369956424'); }
+  /* line 255, sass/_base.sass */
   section.quotation.diane_oakley .contents {
     background-image: url('../img/person-diane_oakley.jpg?1369932616'); }
-  /* line 255, sass/_base.sass */
+  /* line 258, sass/_base.sass */
   section.quotation.nancy_goldberg .contents {
     background-image: url('../img/person-nancy_goldberg.jpg?1369932605'); }
-  /* line 258, sass/_base.sass */
+  /* line 261, sass/_base.sass */
   section.quotation.paula_gjerstad .contents {
     background-image: url('../img/person-paula_gjerstad.jpg?1369932594'); }
-  /* line 261, sass/_base.sass */
+  /* line 264, sass/_base.sass */
   section.quotation.robert_martin .contents {
     background-image: url('../img/person-robert_martin.jpg?1369932583'); }
-  /* line 264, sass/_base.sass */
+  /* line 267, sass/_base.sass */
   section.quotation.sheryl_garrett .contents {
     background-image: url('../img/person-sheryl_garrett.jpg?1369932573'); }
-  /* line 267, sass/_base.sass */
+  /* line 270, sass/_base.sass */
   section.quotation.traer_sunley .contents {
     background-image: url('../img/person-traer_sunley.jpg?1369932549'); }
-  /* line 271, sass/_base.sass */
+  /* line 274, sass/_base.sass */
   section.video .contents {
     overflow: hidden;
     *zoom: 1; }
-    /* line 275, sass/_base.sass */
+    /* line 278, sass/_base.sass */
     section.video .contents .caption h2 {
       font-family: "Proxima N W01 Smbd";
       font-size: 20px;
       line-height: 1.3;
       margin: 1em 0 0.75em;
       text-align: left; }
-    /* line 282, sass/_base.sass */
+    /* line 285, sass/_base.sass */
     section.video .contents .caption p {
       font-size: 18px;
       line-height: 1.4;
       margin: 0.75em 0; }
-  /* line 287, sass/_base.sass */
+  /* line 290, sass/_base.sass */
   section.video video {
     width: 500px;
     height: 280px; }
-  /* line 293, sass/_base.sass */
+  /* line 296, sass/_base.sass */
   section.video.right video, .chapter-2-a-snapshot article .gender_split section.video.quotation.female video, .chapter-2-a-snapshot article section.video.joel_peters video, .chapter-3-working-for-the-nest-egg article section.video.if_you_look_at video, .chapter-3-working-for-the-nest-egg article section.video.a_third_of_baby_boomers video, .chapter-3-working-for-the-nest-egg article section.video.the_great_recession video, .chapter-3-working-for-the-nest-egg article section.video.brutal_job_search video, .chapter-3-working-for-the-nest-egg article section.video.julie_zissimopoulos video, .chapter-4-working-in-retirement article section.video.nancy_goldberg video, .chapter-4-working-in-retirement article section.video.marc_freedman video, .chapter-4-working-in-retirement article section.video.vita_needle video {
     float: right;
     margin-left: 2em; }
-  /* line 298, sass/_base.sass */
+  /* line 301, sass/_base.sass */
   section.video.left video, .chapter-1-rethinking-retirement article section.video.working_about_the_right_amount video, .chapter-2-a-snapshot article .gender_split section.video.quotation.male video, .chapter-3-working-for-the-nest-egg article section.video.sheryl_garrett video, .chapter-3-working-for-the-nest-egg article section.video.babs_tatalias video, .chapter-3-working-for-the-nest-egg article section.video.charles_smith video, .chapter-3-working-for-the-nest-egg article section.video.mike_kemp video, .chapter-4-working-in-retirement article section.video.colleges_see_graying_workforce video, .chapter-4-working-in-retirement article section.video.boom_in_entrepreneurship video {
     float: left;
     margin-right: 2em; }
-  /* line 303, sass/_base.sass */
+  /* line 306, sass/_base.sass */
   section.video.full video, .chapter-2-a-snapshot article section.dante_chinni video, .chapter-3-working-for-the-nest-egg article section.paul_transition video, .chapter-4-working-in-retirement article section.video.paul_interviews_paul video {
     width: 800px;
     height: 450px;
     margin-bottom: 1.5em; }
 
-/* line 308, sass/_base.sass */
+/* line 311, sass/_base.sass */
 .major, .major-alt, .chapter-1-rethinking-retirement article .intro p.second, .chapter-3-working-for-the-nest-egg article .investor_underperforms p.second, .chapter-1-rethinking-retirement article .intro p.first,
 .chapter-1-rethinking-retirement article .intro p.third, .chapter-1-rethinking-retirement article .percentage_of_workers p, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div p.first, .chapter-1-rethinking-retirement article .half_of_american_households p, .chapter-2-a-snapshot article .men_and_women .contents div p, .chapter-3-working-for-the-nest-egg article .intro p, .chapter-3-working-for-the-nest-egg article .financially_unprepared .first, .chapter-3-working-for-the-nest-egg article .investor_underperforms p.first, .chapter-4-working-in-retirement article .intro p.intro, .chapter-4-working-in-retirement article .they_want_to p {
   font-family: "Proxima N W01 Bold", "Century Gothic", Helvetica, Arial, sans-serif;
@@ -413,27 +416,27 @@ section {
   text-align: center;
   text-transform: uppercase;
   line-height: 1.3; }
-  /* line 315, sass/_base.sass */
+  /* line 318, sass/_base.sass */
   .major strong, .major-alt strong, .chapter-1-rethinking-retirement article .intro p.second strong, .chapter-3-working-for-the-nest-egg article .investor_underperforms p.second strong, .chapter-1-rethinking-retirement article .intro p.first strong,
   .chapter-1-rethinking-retirement article .intro p.third strong, .chapter-1-rethinking-retirement article .percentage_of_workers p strong, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div p.first strong, .chapter-1-rethinking-retirement article .half_of_american_households p strong, .chapter-2-a-snapshot article .men_and_women .contents div p strong, .chapter-3-working-for-the-nest-egg article .intro p strong, .chapter-3-working-for-the-nest-egg article .financially_unprepared .first strong, .chapter-3-working-for-the-nest-egg article .investor_underperforms p.first strong, .chapter-4-working-in-retirement article .intro p.intro strong, .chapter-4-working-in-retirement article .they_want_to p strong {
     color: #548e85;
     font-weight: normal; }
 
-/* line 319, sass/_base.sass */
+/* line 322, sass/_base.sass */
 .major-alt, .chapter-1-rethinking-retirement article .intro p.second, .chapter-3-working-for-the-nest-egg article .investor_underperforms p.second {
   font-size: 20px; }
 
-/* line 323, sass/_base.sass */
+/* line 326, sass/_base.sass */
 .border-top, .chapter-2-a-snapshot article .joel_peters, .chapter-3-working-for-the-nest-egg article .if_you_look_at .contents, .chapter-4-working-in-retirement article .nancy_goldberg .contents {
   border-top: 2px solid #383838;
   width: 100%; }
 
-/* line 327, sass/_base.sass */
+/* line 330, sass/_base.sass */
 .border-bottom, .chapter-2-a-snapshot article .joel_peters, .chapter-3-working-for-the-nest-egg article .if_you_look_at .contents, .chapter-4-working-in-retirement article .nancy_goldberg .contents {
   border-bottom: 2px solid #383838;
   width: 100%; }
 
-/* line 331, sass/_base.sass */
+/* line 334, sass/_base.sass */
 .bordered, .chapter-1-rethinking-retirement article .intro p.second, .chapter-1-rethinking-retirement article .percentage_of_workers p, .chapter-1-rethinking-retirement article .increase_of_workers p span, .chapter-4-working-in-retirement article .they_want_to, .chapter-4-working-in-retirement article .couldnt_be_happier {
   border-top: 2px solid #383838;
   border-bottom: 2px solid #383838;
@@ -441,7 +444,7 @@ section {
   padding: 0.5em 0 0.4em 0;
   width: 800px; }
 
-/* line 338, sass/_base.sass */
+/* line 341, sass/_base.sass */
 .form_question, .chapter-5-moving-forward article .share h2,
 .chapter-5-moving-forward article .ask h2,
 .chapter-5-moving-forward article .act h2,
@@ -456,70 +459,70 @@ section {
   text-align: center;
   width: 105%; }
 
-/* line 350, sass/_base.sass */
+/* line 353, sass/_base.sass */
 .form_fields {
   background: url('../img/form-background.jpg?1369788223') center bottom repeat-x;
   font-family: "Proxima N W01 Smbd";
   margin: 0 auto;
   overflow: hidden; }
-  /* line 356, sass/_base.sass */
+  /* line 359, sass/_base.sass */
   .form_fields label {
     font-size: 20px;
     text-transform: uppercase; }
-    /* line 360, sass/_base.sass */
+    /* line 363, sass/_base.sass */
     .form_fields label span {
       display: inline-block;
       margin: 0 0.5em; }
 
 @-webkit-keyframes pulse-highlight {
-  /* line 368, sass/_base.sass */
+  /* line 371, sass/_base.sass */
   0% {
     opacity: 0.8; }
 
-  /* line 371, sass/_base.sass */
+  /* line 374, sass/_base.sass */
   50% {
     opacity: 1; }
 
-  /* line 374, sass/_base.sass */
+  /* line 377, sass/_base.sass */
   100% {
     opacity: 0.8; } }
 
 @-moz-keyframes pulse-highlight {
-  /* line 368, sass/_base.sass */
+  /* line 371, sass/_base.sass */
   0% {
     opacity: 0.8; }
 
-  /* line 371, sass/_base.sass */
+  /* line 374, sass/_base.sass */
   50% {
     opacity: 1; }
 
-  /* line 374, sass/_base.sass */
+  /* line 377, sass/_base.sass */
   100% {
     opacity: 0.8; } }
 
 @-o-keyframes pulse-highlight {
-  /* line 368, sass/_base.sass */
+  /* line 371, sass/_base.sass */
   0% {
     opacity: 0.8; }
 
-  /* line 371, sass/_base.sass */
+  /* line 374, sass/_base.sass */
   50% {
     opacity: 1; }
 
-  /* line 374, sass/_base.sass */
+  /* line 377, sass/_base.sass */
   100% {
     opacity: 0.8; } }
 
 @keyframes pulse-highlight {
-  /* line 368, sass/_base.sass */
+  /* line 371, sass/_base.sass */
   0% {
     opacity: 0.8; }
 
-  /* line 371, sass/_base.sass */
+  /* line 374, sass/_base.sass */
   50% {
     opacity: 1; }
 
-  /* line 374, sass/_base.sass */
+  /* line 377, sass/_base.sass */
   100% {
     opacity: 0.8; } }
 
