--- a/css/sass/_footer.sass
+++ b/css/sass/_footer.sass
@@ -58,14 +58,14 @@ footer
         line-height: 1
         margin: 0
         padding: 0
-        opacity: .25
-        @include transition(opacity .1s)
 
-        &:hover
-          opacity: 1
+        a
+          opacity: .25
+          @include transition(opacity .1s)
 
-        a:hover
-          color: #fff
+          &:hover
+            color: #fff
+            opacity: 1
 
         &.pbs
           float: left
@@ -86,13 +86,31 @@ footer
           font-size: 18px
           margin-top: .35em
 
-          #credits-open
-            border-bottom: 2px solid rgba(255, 255, 255, .5)
-            cursor: pointer
-            margin-left: 1em
-            text-transform: uppercase
+#sources-open,
+#credits-open
+  border-bottom: 2px solid rgba(255, 255, 255, .5)
+  cursor: pointer
+  margin-left: 1em
+  text-transform: uppercase
 
-#credits
+#credits-close,
+#sources-close
+  color: $light
+  cursor: pointer
+  display: block
+  font-size: 48px
+  font-weight: bold
+  padding: 20px 20px
+  position: absolute
+  top: 0
+  right: 0
+  z-index: 10
+
+  &:hover
+    color: $dark
+
+#credits,
+#sources
   display: none
   background: rgba(0, 0, 0, .8)
   position: fixed
@@ -102,79 +120,78 @@ footer
   height: 100%
   z-index: 98
 
-  .credits-content
-    background: #fff
-    border-radius: 6px
-    margin-left: -300px
-    padding: 20px
-    position: fixed
-    top: 10%
-    left: 50%
-    width: 600px
-    z-index: 99
-    overflow: auto
-    @include box-shadow(0 0 35px rgba(0, 0, 0, .75))
+.credits-content,
+.sources-content
+  background: #fff
+  border-radius: 6px
+  margin-left: -300px
+  padding: 20px
+  position: fixed
+  top: 10%
+  left: 50%
+  width: 600px
+  z-index: 99
+  overflow: auto
+  @include box-shadow(0 0 35px rgba(0, 0, 0, .75))
 
-    h2
-      font-family: $bodoni-poster-italic
-      font-size: 32px
-      margin: 0
-      padding: 0
-      text-align: left
+  h2
+    font-family: $bodoni-poster-italic
+    font-size: 32px
+    margin: 0
+    padding: 0
+    text-align: left
+
+  h3
+    font-family: $proxima-bold
+    font-size: 18px
+    text-transform: uppercase
+
+.credits-content
+  h3
+    span
+      color: $light
+      font-size: 85%
+      margin-left: .5em
+      text-transform: none
+
+  ul
+    li
+      color: $light
+      font-family: $proxima-semibold
+      font-size: 14px
+
+      strong
+        color: $dark
+        font-family: $proxima-bold
+        font-size: 16px
+        font-weight: normal
+        margin-right: .5em
+
+  a
+    text-decoration: none
+
+  .photo_credits
+    opacity: .5
 
     h3
-      font-family: $proxima-bold
-      font-size: 18px
-      text-transform: uppercase
+      font-size: 16px
+      margin-bottom: .5em
+      text-transform: none
 
-      span
-        color: $light
-        font-size: 85%
-        margin-left: .5em
-        text-transform: none
+    ul li
+      font-size: 13px
 
-    ul
-      li
-        color: $light
+      strong
         font-family: $proxima-semibold
-        font-size: 14px
-
-        strong
-          color: $dark
-          font-family: $proxima-bold
-          font-size: 16px
-          font-weight: normal
-          margin-right: .5em
-
-    a
-      text-decoration: none
-
-    .photo_credits
-      opacity: .5
-
-      h3
-        font-size: 16px
-        margin-bottom: .5em
-        text-transform: none
-
-      ul li
         font-size: 13px
 
-        strong
-          font-family: $proxima-semibold
-          font-size: 13px
+.sources-content
+  ul
+    li
+      font-family: $proxima-semibold
+      font-size: 14px
 
-    #credits-close
-      color: $light
-      cursor: pointer
-      display: block
-      font-size: 48px
-      font-weight: bold
-      padding: 20px 20px
-      position: absolute
-      top: 0
-      right: 0
-      z-index: 10
-
-      &:hover
-        color: $dark
+      strong
+        font-family: $proxima-bold
+        font-size: 16px
+        font-weight: normal
