--- a/css/style.css
+++ b/css/style.css
@@ -791,18 +791,18 @@ footer {
       font-family: "Proxima N W01 Smbd";
       line-height: 1;
       margin: 0;
-      padding: 0;
-      opacity: 0.25;
-      -webkit-transition: opacity 0.1s;
-      -moz-transition: opacity 0.1s;
-      -o-transition: opacity 0.1s;
-      transition: opacity 0.1s; }
-      /* line 64, sass/_footer.sass */
-      footer .contents div p:hover {
-        opacity: 1; }
-      /* line 67, sass/_footer.sass */
-      footer .contents div p a:hover {
-        color: white; }
+      padding: 0; }
+      /* line 62, sass/_footer.sass */
+      footer .contents div p a {
+        opacity: 0.25;
+        -webkit-transition: opacity 0.1s;
+        -moz-transition: opacity 0.1s;
+        -o-transition: opacity 0.1s;
+        transition: opacity 0.1s; }
+        /* line 66, sass/_footer.sass */
+        footer .contents div p a:hover {
+          color: white;
+          opacity: 1; }
       /* line 70, sass/_footer.sass */
       footer .contents div p.pbs {
         float: left; }
@@ -822,15 +822,36 @@ footer {
         float: right;
         font-size: 18px;
         margin-top: 0.35em; }
-        /* line 89, sass/_footer.sass */
-        footer .contents div p.extra #credits-open {
-          border-bottom: 2px solid rgba(255, 255, 255, 0.5);
-          cursor: pointer;
-          margin-left: 1em;
-          text-transform: uppercase; }
 
-/* line 95, sass/_footer.sass */
-#credits {
+/* line 89, sass/_footer.sass */
+#sources-open,
+#credits-open {
+  border-bottom: 2px solid rgba(255, 255, 255, 0.5);
+  cursor: pointer;
+  margin-left: 1em;
+  text-transform: uppercase; }
+
+/* line 96, sass/_footer.sass */
+#credits-close,
+#sources-close {
+  color: #aaaaaa;
+  cursor: pointer;
+  display: block;
+  font-size: 48px;
+  font-weight: bold;
+  padding: 20px 20px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 10; }
+  /* line 109, sass/_footer.sass */
+  #credits-close:hover,
+  #sources-close:hover {
+    color: #383838; }
+
+/* line 112, sass/_footer.sass */
+#credits,
+#sources {
   display: none;
   background: rgba(0, 0, 0, 0.8);
   position: fixed;
@@ -839,84 +860,84 @@ footer {
   width: 100%;
   height: 100%;
   z-index: 98; }
-  /* line 105, sass/_footer.sass */
-  #credits .credits-content {
-    background: white;
-    border-radius: 6px;
-    margin-left: -300px;
-    padding: 20px;
-    position: fixed;
-    top: 10%;
-    left: 50%;
-    width: 600px;
-    z-index: 99;
-    overflow: auto;
-    -webkit-box-shadow: 0 0 35px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0 0 35px rgba(0, 0, 0, 0.75);
-    box-shadow: 0 0 35px rgba(0, 0, 0, 0.75); }
-    /* line 118, sass/_footer.sass */
-    #credits .credits-content h2 {
-      font-family: "BodoniW01-PosterItalic";
-      font-size: 32px;
-      margin: 0;
-      padding: 0;
-      text-align: left; }
-    /* line 125, sass/_footer.sass */
-    #credits .credits-content h3 {
-      font-family: "Proxima N W01 Bold";
-      font-size: 18px;
-      text-transform: uppercase; }
-      /* line 130, sass/_footer.sass */
-      #credits .credits-content h3 span {
-        color: #aaaaaa;
-        font-size: 85%;
-        margin-left: 0.5em;
-        text-transform: none; }
-    /* line 137, sass/_footer.sass */
-    #credits .credits-content ul li {
-      color: #aaaaaa;
+
+/* line 123, sass/_footer.sass */
+.credits-content,
+.sources-content {
+  background: white;
+  border-radius: 6px;
+  margin-left: -300px;
+  padding: 20px;
+  position: fixed;
+  top: 10%;
+  left: 50%;
+  width: 600px;
+  z-index: 99;
+  overflow: auto;
+  -webkit-box-shadow: 0 0 35px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0 0 35px rgba(0, 0, 0, 0.75);
+  box-shadow: 0 0 35px rgba(0, 0, 0, 0.75); }
+  /* line 137, sass/_footer.sass */
+  .credits-content h2,
+  .sources-content h2 {
+    font-family: "BodoniW01-PosterItalic";
+    font-size: 32px;
+    margin: 0;
+    padding: 0;
+    text-align: left; }
+  /* line 144, sass/_footer.sass */
+  .credits-content h3,
+  .sources-content h3 {
+    font-family: "Proxima N W01 Bold";
+    font-size: 18px;
+    text-transform: uppercase; }
+
+/* line 151, sass/_footer.sass */
+.credits-content h3 span {
+  color: #aaaaaa;
+  font-size: 85%;
+  margin-left: 0.5em;
+  text-transform: none; }
+/* line 158, sass/_footer.sass */
+.credits-content ul li {
+  color: #aaaaaa;
+  font-family: "Proxima N W01 Smbd";
+  font-size: 14px; }
+  /* line 163, sass/_footer.sass */
+  .credits-content ul li strong {
+    color: #383838;
+    font-family: "Proxima N W01 Bold";
+    font-size: 16px;
+    font-weight: normal;
+    margin-right: 0.5em; }
+/* line 170, sass/_footer.sass */
+.credits-content a {
+  text-decoration: none; }
+/* line 173, sass/_footer.sass */
+.credits-content .photo_credits {
+  opacity: 0.5; }
+  /* line 176, sass/_footer.sass */
+  .credits-content .photo_credits h3 {
+    font-size: 16px;
+    margin-bottom: 0.5em;
+    text-transform: none; }
+  /* line 181, sass/_footer.sass */
+  .credits-content .photo_credits ul li {
+    font-size: 13px; }
+    /* line 184, sass/_footer.sass */
+    .credits-content .photo_credits ul li strong {
       font-family: "Proxima N W01 Smbd";
-      font-size: 14px; }
-      /* line 142, sass/_footer.sass */
-      #credits .credits-content ul li strong {
-        color: #383838;
-        font-family: "Proxima N W01 Bold";
-        font-size: 16px;
-        font-weight: normal;
-        margin-right: 0.5em; }
-    /* line 149, sass/_footer.sass */
-    #credits .credits-content a {
-      text-decoration: none; }
-    /* line 152, sass/_footer.sass */
-    #credits .credits-content .photo_credits {
-      opacity: 0.5; }
-      /* line 155, sass/_footer.sass */
-      #credits .credits-content .photo_credits h3 {
-        font-size: 16px;
-        margin-bottom: 0.5em;
-        text-transform: none; }
-      /* line 160, sass/_footer.sass */
-      #credits .credits-content .photo_credits ul li {
-        font-size: 13px; }
-        /* line 163, sass/_footer.sass */
-        #credits .credits-content .photo_credits ul li strong {
-          font-family: "Proxima N W01 Smbd";
-          font-size: 13px; }
-    /* line 167, sass/_footer.sass */
-    #credits .credits-content #credits-close {
-      color: #aaaaaa;
-      cursor: pointer;
-      display: block;
-      font-size: 48px;
-      font-weight: bold;
-      padding: 20px 20px;
-      position: absolute;
-      top: 0;
-      right: 0;
-      z-index: 10; }
-      /* line 179, sass/_footer.sass */
-      #credits .credits-content #credits-close:hover {
-        color: #383838; }
+      font-size: 13px; }
+
+/* line 190, sass/_footer.sass */
+.sources-content ul li {
+  font-family: "Proxima N W01 Smbd";
+  font-size: 14px; }
+  /* line 194, sass/_footer.sass */
+  .sources-content ul li strong {
+    font-family: "Proxima N W01 Bold";
+    font-size: 16px;
+    font-weight: normal; }
 
 /* line 3, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article header.story_header {
