Multi-background for diner image.

--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -8,7 +8,7 @@
     @include transition(opacity 1s)
 
   .company_photo .background_image
-    background-image: image-url('1/company_photo.jpg')
+    background-image: image-url("1/company_photo.jpg")
     background-size: 100%
 
   .intro
@@ -143,7 +143,7 @@
     @extend .spread
 
     .background_image
-      background-image: image-url('1/diner.jpg')
+      @include multi-background("1/diner")
 
     .contents div
       @include boxed(#fff, right, half, centered)
