--- a/css/style.css
+++ b/css/style.css
@@ -1156,7 +1156,19 @@ footer {
       margin: 0 0.1em; }
 /* line 145, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .one_in_four_workers .background_image {
-  background-image: url('../img/1/diner.jpg?1369444335'); }
+  background-image: url('../img/1/diner-giant.jpg'); }
+  @media screen and (max-height: 1080px) and (max-width: 1920px) {
+    /* line 145, sass/_chapter1.sass */
+    .chapter-1-rethinking-retirement article .one_in_four_workers .background_image {
+      background-image: url('../img/1/diner-large.jpg'); } }
+  @media screen and (max-height: 1024px) and (max-width: 1024px) {
+    /* line 145, sass/_chapter1.sass */
+    .chapter-1-rethinking-retirement article .one_in_four_workers .background_image {
+      background-image: url('../img/1/diner-medium.jpg'); } }
+  @media screen and (max-height: 640px) and (max-width: 640px) {
+    /* line 145, sass/_chapter1.sass */
+    .chapter-1-rethinking-retirement article .one_in_four_workers .background_image {
+      background-image: url('../img/1/diner-small.jpg'); } }
 /* line 148, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .one_in_four_workers .contents div {
   clear: left;
