Waitress, not diner.

--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -143,7 +143,7 @@
     @extend .spread
 
     .background_image
-      @include multi-background("1/diner")
+      @include multi-background("1/waitress")
 
     .contents div
       @include boxed(#fff, right, half, centered)
