--- a/css/style.css
+++ b/css/style.css
@@ -388,24 +388,45 @@ section {
       line-height: 1.4;
       margin: 0.75em 0; }
   /* line 287, sass/_base.sass */
-  section.video video {
+  section.video video, section.video .replay {
     width: 500px;
-    height: 280px; }
+    height: 280px;
+    display: block; }
   /* line 293, sass/_base.sass */
+  section.video .replay {
+    position: absolute;
+    z-index: 10;
+    background-repeat: no-repeat;
+    background-position: center; }
+  /* line 299, sass/_base.sass */
+  section.video.playing .replay {
+    display: none; }
+  /* line 303, sass/_base.sass */
   section.video.right video, .chapter-2-a-snapshot article .gender_split section.video.quotation.female video, .chapter-2-a-snapshot article section.video.joel_peters video, .chapter-3-working-for-the-nest-egg article section.video.if_you_look_at video, .chapter-3-working-for-the-nest-egg article section.video.a_third_of_baby_boomers video, .chapter-3-working-for-the-nest-egg article section.video.the_great_recession video, .chapter-3-working-for-the-nest-egg article section.video.brutal_job_search video, .chapter-3-working-for-the-nest-egg article section.video.julie_zissimopoulos video, .chapter-4-working-in-retirement article section.video.nancy_goldberg video, .chapter-4-working-in-retirement article section.video.marc_freedman video, .chapter-4-working-in-retirement article section.video.vita_needle video {
     float: right;
     margin-left: 2em; }
-  /* line 298, sass/_base.sass */
+  /* line 306, sass/_base.sass */
+  section.video.right .replay, .chapter-2-a-snapshot article .gender_split section.video.quotation.female .replay, .chapter-2-a-snapshot article section.video.joel_peters .replay, .chapter-3-working-for-the-nest-egg article section.video.if_you_look_at .replay, .chapter-3-working-for-the-nest-egg article section.video.a_third_of_baby_boomers .replay, .chapter-3-working-for-the-nest-egg article section.video.the_great_recession .replay, .chapter-3-working-for-the-nest-egg article section.video.brutal_job_search .replay, .chapter-3-working-for-the-nest-egg article section.video.julie_zissimopoulos .replay, .chapter-4-working-in-retirement article section.video.nancy_goldberg .replay, .chapter-4-working-in-retirement article section.video.marc_freedman .replay, .chapter-4-working-in-retirement article section.video.vita_needle .replay {
+    right: 0;
+    background-image: url('../img/play-small.png?1369951132'); }
+  /* line 311, sass/_base.sass */
   section.video.left video, .chapter-1-rethinking-retirement article section.video.working_about_the_right_amount video, .chapter-2-a-snapshot article .gender_split section.video.quotation.male video, .chapter-3-working-for-the-nest-egg article section.video.sheryl_garrett video, .chapter-3-working-for-the-nest-egg article section.video.babs_tatalias video, .chapter-3-working-for-the-nest-egg article section.video.charles_smith video, .chapter-3-working-for-the-nest-egg article section.video.mike_kemp video, .chapter-4-working-in-retirement article section.video.colleges_see_graying_workforce video, .chapter-4-working-in-retirement article section.video.boom_in_entrepreneurship video {
     float: left;
     margin-right: 2em; }
-  /* line 303, sass/_base.sass */
-  section.video.full video, .chapter-2-a-snapshot article section.dante_chinni video, .chapter-3-working-for-the-nest-egg article section.paul_transition video, .chapter-4-working-in-retirement article section.video.paul_interviews_paul video {
+  /* line 314, sass/_base.sass */
+  section.video.left .replay, .chapter-1-rethinking-retirement article section.video.working_about_the_right_amount .replay, .chapter-2-a-snapshot article .gender_split section.video.quotation.male .replay, .chapter-3-working-for-the-nest-egg article section.video.sheryl_garrett .replay, .chapter-3-working-for-the-nest-egg article section.video.babs_tatalias .replay, .chapter-3-working-for-the-nest-egg article section.video.charles_smith .replay, .chapter-3-working-for-the-nest-egg article section.video.mike_kemp .replay, .chapter-4-working-in-retirement article section.video.colleges_see_graying_workforce .replay, .chapter-4-working-in-retirement article section.video.boom_in_entrepreneurship .replay {
+    left: 0;
+    background-image: url('../img/play-small.png?1369951132'); }
+  /* line 319, sass/_base.sass */
+  section.video.full video, .chapter-2-a-snapshot article section.dante_chinni video, .chapter-3-working-for-the-nest-egg article section.paul_transition video, .chapter-4-working-in-retirement article section.video.paul_interviews_paul video, section.video.full .replay, .chapter-2-a-snapshot article section.dante_chinni .replay, .chapter-3-working-for-the-nest-egg article section.paul_transition .replay, .chapter-4-working-in-retirement article section.video.paul_interviews_paul .replay {
     width: 800px;
     height: 450px;
     margin-bottom: 1.5em; }
+  /* line 323, sass/_base.sass */
+  section.video.full .replay, .chapter-2-a-snapshot article section.dante_chinni .replay, .chapter-3-working-for-the-nest-egg article section.paul_transition .replay, .chapter-4-working-in-retirement article section.video.paul_interviews_paul .replay {
+    background-image: url('../img/play-large.png?1369951132'); }
 
-/* line 308, sass/_base.sass */
+/* line 326, sass/_base.sass */
 .major, .major-alt, .chapter-1-rethinking-retirement article .intro p.second, .chapter-3-working-for-the-nest-egg article .investor_underperforms p.second, .chapter-1-rethinking-retirement article .intro p.first,
 .chapter-1-rethinking-retirement article .intro p.third, .chapter-1-rethinking-retirement article .percentage_of_workers p, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div p.first, .chapter-1-rethinking-retirement article .half_of_american_households p, .chapter-2-a-snapshot article .men_and_women .contents div p, .chapter-3-working-for-the-nest-egg article .intro p, .chapter-3-working-for-the-nest-egg article .financially_unprepared .first, .chapter-3-working-for-the-nest-egg article .investor_underperforms p.first, .chapter-4-working-in-retirement article .intro p.intro, .chapter-4-working-in-retirement article .they_want_to p {
   font-family: "Proxima N W01 Bold", "Century Gothic", Helvetica, Arial, sans-serif;
@@ -413,27 +434,27 @@ section {
   text-align: center;
   text-transform: uppercase;
   line-height: 1.3; }
-  /* line 315, sass/_base.sass */
+  /* line 333, sass/_base.sass */
   .major strong, .major-alt strong, .chapter-1-rethinking-retirement article .intro p.second strong, .chapter-3-working-for-the-nest-egg article .investor_underperforms p.second strong, .chapter-1-rethinking-retirement article .intro p.first strong,
   .chapter-1-rethinking-retirement article .intro p.third strong, .chapter-1-rethinking-retirement article .percentage_of_workers p strong, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div p.first strong, .chapter-1-rethinking-retirement article .half_of_american_households p strong, .chapter-2-a-snapshot article .men_and_women .contents div p strong, .chapter-3-working-for-the-nest-egg article .intro p strong, .chapter-3-working-for-the-nest-egg article .financially_unprepared .first strong, .chapter-3-working-for-the-nest-egg article .investor_underperforms p.first strong, .chapter-4-working-in-retirement article .intro p.intro strong, .chapter-4-working-in-retirement article .they_want_to p strong {
     color: #548e85;
     font-weight: normal; }
 
-/* line 319, sass/_base.sass */
+/* line 337, sass/_base.sass */
 .major-alt, .chapter-1-rethinking-retirement article .intro p.second, .chapter-3-working-for-the-nest-egg article .investor_underperforms p.second {
   font-size: 20px; }
 
-/* line 323, sass/_base.sass */
+/* line 341, sass/_base.sass */
 .border-top, .chapter-2-a-snapshot article .joel_peters, .chapter-3-working-for-the-nest-egg article .if_you_look_at .contents, .chapter-4-working-in-retirement article .nancy_goldberg .contents {
   border-top: 2px solid #383838;
   width: 100%; }
 
-/* line 327, sass/_base.sass */
+/* line 345, sass/_base.sass */
 .border-bottom, .chapter-2-a-snapshot article .joel_peters, .chapter-3-working-for-the-nest-egg article .if_you_look_at .contents, .chapter-4-working-in-retirement article .nancy_goldberg .contents {
   border-bottom: 2px solid #383838;
   width: 100%; }
 
-/* line 331, sass/_base.sass */
+/* line 349, sass/_base.sass */
 .bordered, .chapter-1-rethinking-retirement article .intro p.second, .chapter-1-rethinking-retirement article .percentage_of_workers p, .chapter-1-rethinking-retirement article .increase_of_workers p span, .chapter-4-working-in-retirement article .they_want_to, .chapter-4-working-in-retirement article .couldnt_be_happier {
   border-top: 2px solid #383838;
   border-bottom: 2px solid #383838;
@@ -441,7 +462,7 @@ section {
   padding: 0.5em 0 0.4em 0;
   width: 800px; }
 
-/* line 338, sass/_base.sass */
+/* line 356, sass/_base.sass */
 .form_question, .chapter-5-moving-forward article .share h2,
 .chapter-5-moving-forward article .ask h2,
 .chapter-5-moving-forward article .act h2,
@@ -456,70 +477,70 @@ section {
   text-align: center;
   width: 105%; }
 
-/* line 350, sass/_base.sass */
+/* line 368, sass/_base.sass */
 .form_fields {
   background: url('../img/form-background.jpg?1369914302') center bottom repeat-x;
   font-family: "Proxima N W01 Smbd";
   margin: 0 auto;
   overflow: hidden; }
-  /* line 356, sass/_base.sass */
+  /* line 374, sass/_base.sass */
   .form_fields label {
     font-size: 20px;
     text-transform: uppercase; }
-    /* line 360, sass/_base.sass */
+    /* line 378, sass/_base.sass */
     .form_fields label span {
       display: inline-block;
       margin: 0 0.5em; }
 
 @-webkit-keyframes pulse-highlight {
-  /* line 368, sass/_base.sass */
+  /* line 386, sass/_base.sass */
   0% {
     opacity: 0.8; }
 
-  /* line 371, sass/_base.sass */
+  /* line 389, sass/_base.sass */
   50% {
     opacity: 1; }
 
-  /* line 374, sass/_base.sass */
+  /* line 392, sass/_base.sass */
   100% {
     opacity: 0.8; } }
 
 @-moz-keyframes pulse-highlight {
-  /* line 368, sass/_base.sass */
+  /* line 386, sass/_base.sass */
   0% {
     opacity: 0.8; }
 
-  /* line 371, sass/_base.sass */
+  /* line 389, sass/_base.sass */
   50% {
     opacity: 1; }
 
-  /* line 374, sass/_base.sass */
+  /* line 392, sass/_base.sass */
   100% {
     opacity: 0.8; } }
 
 @-o-keyframes pulse-highlight {
-  /* line 368, sass/_base.sass */
+  /* line 386, sass/_base.sass */
   0% {
     opacity: 0.8; }
 
-  /* line 371, sass/_base.sass */
+  /* line 389, sass/_base.sass */
   50% {
     opacity: 1; }
 
-  /* line 374, sass/_base.sass */
+  /* line 392, sass/_base.sass */
   100% {
     opacity: 0.8; } }
 
 @keyframes pulse-highlight {
-  /* line 368, sass/_base.sass */
+  /* line 386, sass/_base.sass */
   0% {
     opacity: 0.8; }
 
-  /* line 371, sass/_base.sass */
+  /* line 389, sass/_base.sass */
   50% {
     opacity: 1; }
 
-  /* line 374, sass/_base.sass */
+  /* line 392, sass/_base.sass */
   100% {
     opacity: 0.8; } }
 
@@ -2314,13 +2335,13 @@ footer {
   margin: 0.5em 0 1.5em; }
 /* line 163, sass/_chapter5.sass */
 .chapter-5-moving-forward article .three_steps .first_step {
-  background-image: url('../img/5/1.gif?1369937150');
+  background-image: url('../img/5/1.gif?1369951132');
   background-position: left 30px; }
 /* line 167, sass/_chapter5.sass */
 .chapter-5-moving-forward article .three_steps .second_step {
-  background-image: url('../img/5/2.gif?1369937161');
+  background-image: url('../img/5/2.gif?1369951132');
   background-position: left 12px; }
 /* line 171, sass/_chapter5.sass */
 .chapter-5-moving-forward article .three_steps .third_step {
-  background-image: url('../img/5/3.gif?1369937170');
+  background-image: url('../img/5/3.gif?1369951132');
   background-position: left 25px; }
