--- a/css/sass/_chapter5.sass
+++ b/css/sass/_chapter5.sass
@@ -70,7 +70,7 @@
         height: 160px
         z-index: 2
 
-        span
+        a, span
           background-position: center center
           background-repeat: no-repeat
           cursor: pointer
