--- a/css/sass/_footer.sass
+++ b/css/sass/_footer.sass
@@ -130,6 +130,7 @@ footer
   top: 10%
   left: 50%
   width: 600px
+  height: 80%
   z-index: 99
   overflow: auto
   @include box-shadow(0 0 35px rgba(0, 0, 0, .75))
@@ -187,9 +188,12 @@ footer
 
 .sources-content
   ul
+    margin-left: 1.25em
+    
     li
       font-family: $proxima-semibold
       font-size: 14px
+      list-style: square
 
       strong
         font-family: $proxima-bold
